# CBT-Marketplace

./: .gitignore  .htaccess  README.md  alembic.ini  apache2.conf  index.html  package-api.json  package-lock.json  package.json  pyproject.toml  requirements.txt  tailwind.config.js  vite.config.ts  vite.config.ts.timestamp-1736605066599-19dc5a7abc4f3.mjs
alembic/: env.py
alembic/versions/: add_article_management.py  initial_migration.py
api/: admin.py  auth.js  knexfile.js  main.py  models.py  serializers.py  server.js  swagger.js  urls.py  views.py
api/core/: config.py  deps.py  security.py
api/crud/: __init__.py  base.py  crud_article.py  crud_client.py  crud_institution.py  crud_psychologist.py  crud_user.py
api/data/: mockData.js
api/db/: base.py  connection.js  init_db.py  knexfile.js  migrate.js  reset.js  seed.js  seed.sql  session.py
api/fixtures/: initial_data.json
api/lib/: firebase-admin.js  prisma.js
api/middleware/: auth.js
api/models/: article.py  client.py  institution.py  psychologist.py  user.py
api/public/: index.html
api/routes/: admin.py  appointments.js  articles.js  articles.py  auth.js  auth.py  clients.py  dashboard.js  institutes.js  institutions.js  institutions.py  payments.js  promotions.js  psychologists.js  psychologists.py  services.js  users.js  users.py
api/schemas/: article.py  client.py  institution.py  token.py  (+2 more)
core/: settings.py  urls.py
database/: articles.sql  dashboard.sql  import.sql  schema.sql  seed.sql
prisma/: schema.prisma
scripts/: generate-certs.js
src/: App.tsx  Routes.tsx  index.css
(+117 files in other folders)
