[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cbt-marketplace"
version = "0.1.0"
authors = [
  { name="CBT Marketplace Team" },
]
description = "CBT Marketplace API"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "fastapi>=0.109.2",
  "uvicorn>=0.27.1",
  "sqlalchemy>=2.0.27",
  "pydantic>=2.6.1",
  "python-jose[cryptography]>=3.3.0",
  "passlib[bcrypt]>=1.7.4",
  "python-multipart>=0.0.6",
  "alembic>=1.13.1",
  "python-dotenv>=1.0.1",
  "aiosqlite>=0.19.0",
]

[tool.hatch.build.targets.wheel]
packages = ["api"]